[gd_scene load_steps=17 format=3 uid="uid://mahg2nbldblf"]

[ext_resource type="Script" uid="uid://dc256idbg6umu" path="res://level/level.gd" id="1_dbc2d"]
[ext_resource type="Theme" uid="uid://bbr70t6gbgc2m" path="res://theme/maintheme.tres" id="2_44x8d"]
[ext_resource type="PackedScene" uid="uid://b8kf561rc3uea" path="res://interface/question_panel/question.tscn" id="3_44x8d"]
[ext_resource type="FontFile" uid="uid://1qmoiwwfgi76" path="res://theme/alagard-12px-unicode.ttf" id="3_xii2b"]
[ext_resource type="Shader" uid="uid://cwge4y7tj8vrt" path="res://interface/main_menu/blur.gdshader" id="4_0v1st"]
[ext_resource type="PackedScene" uid="uid://b0dgarfasdp6i" path="res://level/map/map.tscn" id="4_ivpvi"]
[ext_resource type="Script" uid="uid://m1vo0myw6iol" path="res://level/wave_generator/wave_generator.gd" id="4_vkbyq"]
[ext_resource type="PackedScene" uid="uid://dmmbux1y4e8bw" path="res://interface/main_menu/cross_button.tscn" id="5_6gtgk"]
[ext_resource type="PackedScene" uid="uid://dj334r3yagshk" path="res://interface/settings_panel/settings.tscn" id="6_cw150"]
[ext_resource type="PackedScene" uid="uid://bnyty5vobw6si" path="res://level/place_for_tower/v1/place_for_tower.tscn" id="8_6gtgk"]
[ext_resource type="PackedScene" uid="uid://cnrsl2eyk4iwf" path="res://level/plot_menu/plot_menu.tscn" id="8_rhqlf"]
[ext_resource type="AudioStream" uid="uid://d3q0taf82i5nn" path="res://asset/theme2.wav" id="10_cw150"]
[ext_resource type="Texture2D" uid="uid://c8djfufpkikkv" path="res://level/tower.png" id="10_l5lfc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6gtgk"]
shader = ExtResource("4_0v1st")
shader_parameter/lod = 2.0

[sub_resource type="Curve2D" id="Curve2D_6gtgk"]
bake_interval = 1.0
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 342.521, 1172.88, 0, 0, 0, 0, 343.674, 309.076, -29.6159, 17.8807, 29.6159, -17.8807, 375.966, 192.596, 0, 0, 0, 0, 491.293, 173, 0, 0, 0, 0, 1560.37, 173, -17.2841, -17.1102, 17.2841, 17.1102, 1633.03, 187.983, 0, 0, 0, 0, 1650.33, 230.654, 0, 0, 0, 0, 1645.72, 374.813, 15.7275, -12.7128, -15.7275, 12.7128, 1620.34, 410.564, 0, 0, 0, 0, 1571.91, 420.943, 0, 0, 0, 0, 704, 420, 14.5228, -15.7684, -14.5228, 15.7684, 645.831, 440.549, 0, 0, 0, 0, 628.532, 500.519, 0, 0, 0, 0, 640.065, 671.203, -16.507, -12.5953, 16.507, 12.5953, 664.283, 700.035, 0, 0, 0, 0, 769.231, 709.261, 0, 0, 0, 0, 1567.29, 703.495, -18.5626, -12.4016, 18.5626, 12.4016, 1624.96, 712.721, 0, 0, 0, 0, 1649.18, 755.392, 0, 0, 0, 0, 1644.56, 847.653, 17.0738, -8.64151, -17.0738, 8.64151, 1616.88, 890.324, 0, 0, 0, 0, 1535, 896.091, 0, 0, 0, 0, 783.07, 891.477, 26.038, -22.7357, -26.038, 22.7357, 675.816, 908.776, 0, 0, 0, 0, 645.831, 979.126, 0, 0, 0, 0, 646.984, 1193.63)
}
point_count = 26

[sub_resource type="CircleShape2D" id="CircleShape2D_oem8r"]
radius = 100.005

[node name="Level" type="Node2D" node_paths=PackedStringArray("camera")]
position = Vector2(960, 540)
script = ExtResource("1_dbc2d")
camera = NodePath("Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 2)
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
theme = ExtResource("2_44x8d")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -423.0
offset_top = -141.0
offset_right = -7.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/Control/PanelContainer"]
layout_mode = 2
text = "–†–µ–∫–ª–∞–º–∞"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -316.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 332.0
grow_horizontal = 0

[node name="Panel" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer2"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/Panel"]
layout_mode = 2
theme_override_constants/margin_top = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6

[node name="Gold" type="Label" parent="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 60
text = "üí∞"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldInput" type="Label" parent="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.85098, 0.282353, 1)
theme_override_constants/outline_size = 5
autowrap_mode = 3
text_overrun_behavior = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Hp" type="Label" parent="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "‚ô•Ô∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HpInput" type="Label" parent="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.972549, 0.25098, 0.243137, 1)
theme_override_constants/outline_size = 5

[node name="MenuButton" type="Button" parent="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 28
text = "–ú–µ–Ω—é"

[node name="StartWave" type="Button" parent="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 28
text = "–ù–∞—á–∞—Ç—å –≤–æ–ª–Ω—É"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer2/PanelContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "–í–æ–ª–Ω–∞"

[node name="WaveCount" type="Label" parent="CanvasLayer/Control/VBoxContainer2/PanelContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 34
text = "1"
horizontal_alignment = 1

[node name="GmPanel" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/GmPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_xii2b")
theme_override_font_sizes/font_size = 28
text = "–£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å hp:"
horizontal_alignment = 1

[node name="HpSpinBox" type="SpinBox" parent="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer"]
layout_mode = 2
rounded = true
alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_xii2b")
theme_override_font_sizes/font_size = 28
text = "–£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å 
–∑–æ–ª–æ—Ç–æ:"
horizontal_alignment = 1

[node name="GoldSpinBox" type="SpinBox" parent="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer"]
layout_mode = 2
max_value = 10000.0
rounded = true
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_xii2b")
theme_override_font_sizes/font_size = 28
text = "–ü—Ä–æ–ø—É—Å–∫–∞—Ç—å 
–≤–æ–ø—Ä–æ—Å—ã:"
horizontal_alignment = 1

[node name="QuestionCheckBox" type="CheckBox" parent="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SkipWaveButton" type="Button" parent="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer"]
layout_mode = 2
text = "–ø—Ä–æ–ø—É—Å—Ç–∏—Ç—å –≤–æ–ª–Ω—É"

[node name="Button" type="Button" parent="CanvasLayer/Control"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 24.0
offset_right = 91.3241
offset_bottom = 84.251
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
keep_pressed_outside = true
text = "–ü–∞—É–∑–∞"

[node name="Button2" type="Button" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_left = 292.0
offset_top = 24.0
offset_right = 440.324
offset_bottom = 84.251
focus_mode = 0
text = "–í–æ–ø—Ä–æ—Å"

[node name="Question" parent="CanvasLayer/Control" instance=ExtResource("3_44x8d")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Menu" type="Control" parent="CanvasLayer/Control"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Menu"]
material = SubResource("ShaderMaterial_6gtgk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.560784)

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.5
offset_top = -131.0
offset_right = 226.5
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Menu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Menu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Label" type="Label" parent="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "–ú–µ–Ω—é"

[node name="Label2" type="Label" parent="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_xii2b")
theme_override_font_sizes/font_size = 17
text = "–ù–∞–∂–º–∏ –Ω–∞ —Ñ–ª–∞–∂–æ–∫, —á—Ç–æ–±—ã –ø–æ—Å—Ç–∞–≤–∏—Ç—å –±–∞—à–Ω—é"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "–ù–∞—Å—Ç—Ä–æ–π–∫–∏"

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer"]
self_modulate = Color(0.839216, 0.12549, 0.0470588, 1)
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "–ù–∞ –≥–ª–∞–≤–Ω—ã–π —ç–∫—Ä–∞–Ω"

[node name="MenuCrossButton" parent="CanvasLayer/Control/Menu" instance=ExtResource("5_6gtgk")]
layout_mode = 1
offset_left = 173.0
offset_top = -144.0
offset_right = 243.0
offset_bottom = -74.0001
scale = Vector2(0.86, 0.86)
focus_mode = 0

[node name="Settings" parent="CanvasLayer/Control/Menu" instance=ExtResource("6_cw150")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="DefeatMenu" type="Control" parent="CanvasLayer/Control"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/DefeatMenu"]
material = SubResource("ShaderMaterial_6gtgk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.560784)

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/DefeatMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/DefeatMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "–í—ã –ø—Ä–æ–≥–∏–≥—Ä–∞–ª–∏!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "–ù–∞—á–∞—Ç—å –∑–∞–Ω–æ–≤–æ"

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.840797, 0.12702, 0.0470296, 1)
layout_mode = 2
focus_mode = 0
text = "–í—ã–π—Ç–∏ "

[node name="WinMenu" type="Control" parent="CanvasLayer/Control"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/WinMenu"]
material = SubResource("ShaderMaterial_6gtgk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.560784)

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/WinMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/WinMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/WinMenu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="CanvasLayer/Control/WinMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.705882, 0, 1)
theme_override_constants/outline_size = 10
text = "–í—ã –ø–æ–±–µ–¥–∏–ª–∏!"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="CanvasLayer/Control/WinMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "–ü—Ä–æ–¥–æ–ª–∂–∏—Ç—å"

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/WinMenu/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.840797, 0.12702, 0.0470296, 1)
layout_mode = 2
focus_mode = 0
text = "–í—ã–π—Ç–∏ "

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
visible = false
show_behind_parent = true
z_as_relative = false
offset_right = 1920.0
offset_bottom = 1083.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1083)
render_target_update_mode = 0

[node name="Plot" type="CanvasLayer" parent="."]

[node name="PlotMenu" parent="Plot" instance=ExtResource("8_rhqlf")]
unique_name_in_owner = true
visible = false

[node name="Level" type="Node2D" parent="."]
position = Vector2(-960, -540)

[node name="map" parent="Level" node_paths=PackedStringArray("camera") instance=ExtResource("4_ivpvi")]
unique_name_in_owner = true
z_index = -5
position = Vector2(9, 101)
scale = Vector2(1.3, 1.3)
camera = NodePath("../../Camera2D")

[node name="Gates" type="Sprite2D" parent="Level/map"]
unique_name_in_owner = true
z_index = 2
z_as_relative = false
position = Vector2(436.024, 755.419)
texture = ExtResource("10_l5lfc")

[node name="Path2D" type="Path2D" parent="Level/map"]
unique_name_in_owner = true
y_sort_enabled = true
scale = Vector2(0.667, 0.667)
curve = SubResource("Curve2D_6gtgk")

[node name="EnemyTimer" type="Timer" parent="Level"]

[node name="Home" type="Area2D" parent="Level"]
position = Vector2(571, 1204)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Home"]
shape = SubResource("CircleShape2D_oem8r")

[node name="Places" type="Node2D" parent="Level"]
unique_name_in_owner = true
position = Vector2(14, 0)

[node name="PlaceForTower" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(200, 862)

[node name="PlaceForTower2" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(200, 412)

[node name="PlaceForTower3" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(200, 562)

[node name="PlaceForTower4" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(200, 712)

[node name="PlaceForTower5" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(560, 792)

[node name="PlaceForTower6" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(710, 792)

[node name="PlaceForTower7" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(860, 792)

[node name="PlaceForTower8" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(1010, 792)

[node name="PlaceForTower9" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(1160, 792)

[node name="PlaceForTower10" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(1309, 792)

[node name="PlaceForTower11" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(560, 352)

[node name="PlaceForTower12" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(710, 352)

[node name="PlaceForTower13" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(860, 352)

[node name="PlaceForTower14" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(1010, 352)

[node name="PlaceForTower15" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(1160, 352)

[node name="PlaceForTower16" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(1309, 352)

[node name="PlaceForTower17" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(431, 562)

[node name="PlaceForTower18" parent="Level/Places" instance=ExtResource("8_6gtgk")]
position = Vector2(431, 712)

[node name="Wave_generator" type="Node" parent="Level"]
unique_name_in_owner = true
script = ExtResource("4_vkbyq")
metadata/_custom_type_script = "uid://m1vo0myw6iol"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("10_cw150")
volume_db = -15.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/Panel/MarginContainer/VBoxContainer/StartWave" to="." method="start_wave"]
[connection signal="value_changed" from="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer/HpSpinBox" to="." method="_on_hp_spin_box_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer/GoldSpinBox" to="." method="_on_gold_spin_box_value_changed"]
[connection signal="toggled" from="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer/HBoxContainer/QuestionCheckBox" to="." method="_on_question_check_box_toggled"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/GmPanel/VBoxContainer/SkipWaveButton" to="." method="_on_skip_wave_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Menu/MenuCrossButton" to="." method="_on_menu_cross_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/WinMenu/PanelContainer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/WinMenu/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="child_exiting_tree" from="Level/map/Path2D" to="." method="_on_path_2d_child_exiting_tree"]
[connection signal="timeout" from="Level/EnemyTimer" to="." method="next_enemy"]
[connection signal="area_entered" from="Level/Home" to="." method="_on_home_area_entered"]
[connection signal="add_enemy" from="Level/Wave_generator" to="." method="_on_wave_generator_add_enemy"]
[connection signal="wave_ended" from="Level/Wave_generator" to="." method="_on_wave_generator_wave_ended"]
